fix spacing

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,7 +17,7 @@ body {
   .top {
     position: relative;
     height: 40%;
-    padding-top: $padding * 8;
+    padding-top: $padding * 4;
   }
   .bottom {
     position: relative;
