--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -5,7 +5,7 @@ $col-violet: #6123F3;
 $col-red: #FF4A00;
 
 // Spacing
-$padding: 10px;
+$padding: 20px;
 
 // Animation
 $animationDuration: 500ms;
